--- a/qdrant-landing/themes/qdrant-2024/assets/css/hybrid-cloud.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/hybrid-cloud.scss
@@ -12,3 +12,4 @@
 @import 'partials/get-started-small-database';
 @import 'partials/get-started';
 @import 'partials/customer-list';
+@import 'cookit';
