--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/js.html
@@ -1,8 +1,29 @@
+<!--Coocke banner-->
+{{ $cookit := resources.Get "/js/cookit.js" | js.Build | minify | resources.Fingerprint "sha512" }}
+<script src="{{ $cookit.RelPermalink }}"></script>
+{{ with (.Site.GetPage "/headless/cookies") }}
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    window.cookit({
+      messageText: "{{ .Params.message.text }}",
+      linkText: "{{ .Params.link.text }}",
+      linkUrl: "{{ .Params.link.url }}",
+      buttonText: "{{ .Params.button.text }}",
+      backgroundColor: {{ .Params.background }},
+      messageColor: {{ .Params.message.color }},
+      linkColor: {{ .Params.link.color }},
+      buttonColor: {{ .Params.button.color }},
+    });
+  });
+</script>
+{{ end }}
+
 {{ if .IsHome }}
   <!--splide.js carousel-->
   {{ $splideJs := resources.Get "/js/vendor/splide.js" | js.Build | minify | resources.Fingerprint "sha512" }}
   <script src="{{ $splideJs.RelPermalink }}"></script>
 {{ end }}
+
 {{ if eq .Section "documentation" }}
   <!--todo: only where this needed-->
   {{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512" }}
