--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/carousel.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/carousel.html
@@ -1,9 +1,11 @@
 {{ with (.Site.GetPage "/headless/carousel") }}
   <section class="carousel">
     <div class="carousel__content">
-      {{ range $index, $element := .Params.photoCards }}
-        <div class="carousel__image" style="background-image: url(/img/carousel/carousel-{{ $index }}.png)"></div>
-      {{ end }}
+      <div class="carousel__cards">
+        {{ range $index, $element := .Params.photoCards }}
+          <div class="carousel__image" style="background-image: url(/img/carousel/carousel-{{ $index }}.png)"></div>
+        {{ end }}
+      </div>
     </div>
   </section>
 {{ end }}
