--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-post.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-post.html
@@ -7,7 +7,7 @@
         <span>&middot;</span>
         <p>{{ time.Format "January 02, 2006" .Date }}</p>
       </div>
-      <img class="qdrant-blog-post__preview" src="{{ .Params.preview_image }}" alt="Preview">
+      <img class="qdrant-blog-post__preview" src="{{ .Params.preview_image }}" alt="Preview" />
     </div>
 
     <div class="qdrant-blog-post__body">
@@ -16,23 +16,28 @@
         <div class="qdrant-blog-post__social-links">
           <a href="/">
             <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10.8423 15.5895L4.40655 22.938H0.841797L9.1773 13.416L10.8423 15.5895Z" fill="#161E33"/>
-              <path d="M12.7891 8.6785L18.6818 1.9375H22.2443L14.4391 10.864L12.7891 8.6785Z" fill="#161E33"/>
-              <path d="M23.6168 22.9375H16.4475L0.384766 1.9375H7.73552L23.6168 22.9375ZM17.4308 20.8053H19.4048L6.66302 3.958H4.54502L17.4308 20.8053Z" fill="#161E33"/>
+              <path d="M10.8423 15.5895L4.40655 22.938H0.841797L9.1773 13.416L10.8423 15.5895Z" fill="#161E33" />
+              <path d="M12.7891 8.6785L18.6818 1.9375H22.2443L14.4391 10.864L12.7891 8.6785Z" fill="#161E33" />
+              <path
+                d="M23.6168 22.9375H16.4475L0.384766 1.9375H7.73552L23.6168 22.9375ZM17.4308 20.8053H19.4048L6.66302 3.958H4.54502L17.4308 20.8053Z"
+                fill="#161E33"
+              />
             </svg>
           </a>
           <a href="/">
             <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_1811_16094)">
-                <path d="M30.6667 0.4375H1.33333C0.533333 0.4375 0 0.970833 0 1.77083V31.1042C0 31.9042 0.533333 32.4375 1.33333 32.4375H30.6667C31.4667 32.4375 32 31.9042 32 31.1042V1.77083C32 0.970833 31.4667 0.4375 30.6667 0.4375ZM9.46667 27.7708H4.8V12.4375H9.6V27.7708H9.46667ZM7.06667 10.3042C5.6 10.3042 4.26667 9.10417 4.26667 7.50417C4.26667 6.0375 5.46667 4.70417 7.06667 4.70417C8.53333 4.70417 9.86667 5.90417 9.86667 7.50417C9.86667 9.10417 8.66667 10.3042 7.06667 10.3042ZM27.3333 27.7708H22.5333V20.3042C22.5333 18.5708 22.5333 16.3042 20.1333 16.3042C17.6 16.3042 17.3333 18.1708 17.3333 20.1708V27.7708H12.5333V12.4375H17.0667V14.5708C17.7333 13.3708 19.2 12.1708 21.6 12.1708C26.4 12.1708 27.3333 15.3708 27.3333 19.5042V27.7708Z" fill="#161E33"/>
+                <path
+                  d="M30.6667 0.4375H1.33333C0.533333 0.4375 0 0.970833 0 1.77083V31.1042C0 31.9042 0.533333 32.4375 1.33333 32.4375H30.6667C31.4667 32.4375 32 31.9042 32 31.1042V1.77083C32 0.970833 31.4667 0.4375 30.6667 0.4375ZM9.46667 27.7708H4.8V12.4375H9.6V27.7708H9.46667ZM7.06667 10.3042C5.6 10.3042 4.26667 9.10417 4.26667 7.50417C4.26667 6.0375 5.46667 4.70417 7.06667 4.70417C8.53333 4.70417 9.86667 5.90417 9.86667 7.50417C9.86667 9.10417 8.66667 10.3042 7.06667 10.3042ZM27.3333 27.7708H22.5333V20.3042C22.5333 18.5708 22.5333 16.3042 20.1333 16.3042C17.6 16.3042 17.3333 18.1708 17.3333 20.1708V27.7708H12.5333V12.4375H17.0667V14.5708C17.7333 13.3708 19.2 12.1708 21.6 12.1708C26.4 12.1708 27.3333 15.3708 27.3333 19.5042V27.7708Z"
+                  fill="#161E33"
+                />
               </g>
               <defs>
                 <clipPath id="clip0_1811_16094">
-                  <rect width="32" height="32" fill="white" transform="translate(0 0.4375)"/>
+                  <rect width="32" height="32" fill="white" transform="translate(0 0.4375)" />
                 </clipPath>
               </defs>
             </svg>
-
           </a>
         </div>
       </div>
