--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_carousel.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_carousel.scss
@@ -2,17 +2,20 @@
 
 .carousel {
   min-height: rem(240);
-  overflow-x: scroll;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-  scroll-behavior: smooth;
   background-color: $neutral-94;
 
-  &::-webkit-scrollbar {
+  &__content {
+    overflow-x: scroll;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    scroll-behavior: smooth;
+  }
+
+  &__content::-webkit-scrollbar {
     display: none;
   }
 
-  &__content {
+  &__cards {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -31,5 +34,12 @@
 
   @include media-breakpoint-up(xl) {
     padding-bottom: $spacer * 5;
+  }
+
+  @include media-breakpoint-up(xxl) {
+    &__content {
+      max-width: rem(1102);
+      margin: 0 auto;
+    }
   }
 }
