--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -54,4 +54,6 @@
 @import 'partials/qdrant-blog-hero';
 @import 'partials/pagination';
 @import 'partials/newsletter';
-@import 'partials/qdrant-blog-post';
+@import 'partials/qdrant-post';
+@import 'partials/qdrant-articles-hero';
+@import 'partials/qdrant-articles-posts';
