--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
@@ -1,6 +1,6 @@
 @use '../helpers/functions' as *;
 
-.qdrant-blog-post {
+.qdrant-post {
   &__header {
     padding-top: $spacer * 2.5;
     padding-bottom: $spacer * 1.5;
@@ -106,7 +106,7 @@
 
   @include media-breakpoint-up(xl) {
     &__header {
-      max-width: rem(920);
+      width: rem(920);
       margin: 0 auto;
       padding-top: $spacer * 5;
       padding-bottom: $spacer * 5;
@@ -120,7 +120,7 @@
     &__body {
       flex-direction: row;
       gap:  $spacer * 5;
-      max-width: rem(920);
+      width: rem(920);
       margin: 0 auto;
     }
 
@@ -129,8 +129,8 @@
       justify-content: flex-start;
       align-items: center;
       gap: $spacer * 1.5;
-      width: $spacer * 3;
-      margin-left: $spacer * 2;
+      width: $spacer * 5;
+      padding-left: $spacer * 2;
 
       &-links {
         flex-direction: column;
@@ -139,6 +139,8 @@
     }
 
     &__content {
+      width: calc(100% - 160px);
+
       p, li {
         font-size: rem(18);
         line-height: rem(27);
