--- a/qdrant-landing/themes/qdrant-2024/layouts/articles/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/articles/list.html
@@ -3,11 +3,14 @@
     {{ partial "top-banner" . }}
     {{ partial "menu" . }}
     {{ partial "menu-mobile" . }}
+    {{ partial "qdrant-articles-hero" . }}
   </header>
 
-  {{ partial "qdrant-post" . }}
+  {{ partial "qdrant-articles-posts" . }}
 
   {{ with (.Site.GetPage "/headless/get-started-blogs") }}
     {{ partial "get-started-small" (dict "context" . "class" "get-started-blogs") }}
   {{ end }}
+
+  {{ partial "newsletter" . }}
 {{ end }}
