--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -35,7 +35,7 @@
                             <p><small>Build your MVP on an Open Source stack, or run scale-ready products in the cloud. Choose the right plan for your project.
                             </small></p>
 
-                            <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big mt-4" href="/solutions/">
+                            <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big mt-4" href="/solutions/" target="_blank">
                                 <span class="txt">What can I use Qdrant for?</span>
                             </a>
                         </div>
@@ -57,7 +57,7 @@
                         <div class="text">Scale your production solutions without deployment and upkeep.
                             <a href="https://cloud.qdrant.io/calculator" target="_blank">Calculate your usage.</a>
                         </div>
-                        <a href="/documentation/cloud/quickstart-cloud" class="theme-btn btn-style-five btn-small w-100">
+                        <a href="/documentation/cloud/quickstart-cloud/" class="theme-btn btn-style-five btn-small w-100" target="_blank">
                             <span class="txt">Start Free</span>
                         </a>
                         <ul class="price-list">
@@ -87,7 +87,7 @@
                         </div>
                         <div class="text">Bring your own cluster from any cloud provider, on-premise infrastructure, or edge locations and connect them to the managed cloud.
                         </div>
-                        <a href="{{ .Site.Params.cloud }}" class="theme-btn btn-style-five btn-small w-100">
+                        <a href="{{ .Site.Params.cloud }}" class="theme-btn btn-style-five btn-small w-100" target="_blank">
                             <span class="txt">Get Started</span>
                         </a>
                         <ul class="price-list">
@@ -114,7 +114,7 @@
                             <br>
                             <br>
                         </div>
-                        <a href="{{ .Site.Params.mailchimp_contact_form }}" class="theme-btn btn-style-five btn-small w-100">
+                        <a href="{{ .Site.Params.mailchimp_contact_form }}" class="theme-btn btn-style-five btn-small w-100" target="_blank">
                             <span class="txt">Contact Us</span>
                         </a>
                         <ul class="price-list">
