--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -48,7 +48,7 @@
             <!-- Price Block -->
             <div class="price-block col-lg-4 col-md-6 col-sm-12 mb-5 pb-5">
                 <div class="inner-box">
-                    <div class="title">Qdrant Cloud</div>
+                    <div class="title">Managed Cloud</div>
                     <div class="content-box">
                         <div class="price-box">
                             <span class="icon flaticon-skyline"></span>$0
@@ -71,6 +71,7 @@
                             <li>Zero-downtime upgrades</li>
                             <li>Unlimited users</li>
                             <li>Standard support plan</li>
+                            <li>Can be upgraded to premium support plan</li>
                         </ul>
                     </div>
                 </div>
@@ -92,9 +93,10 @@
                         </a>
                         <ul class="price-list">
                             <li>All benefits of Qdrant Cloud</li>
-                            <li>Security, Data Isolation, Optimal Latency</li>
+                            <li>Security, data isolation, optimal latency</li>
                             <li>Use the Managed Cloud Central Cluster Management</li>
-                            <li>Can Be Upgraded to Premium Support Plan</li>
+                            <li>Standard support plan</li>
+                            <li>Can be upgraded to premium support plan</li>
                         </ul>
                     </div>
                 </div>
@@ -119,9 +121,9 @@
                         </a>
                         <ul class="price-list">
                             <li>All the benefits of Hybrid Cloud</li>
-                            <li>Security, Data Isolation, Optimal Latency</li>
+                            <li>Security, data isolation, optimal latency</li>
                             <li>Use the Managed Cloud Central Cluster Management or run the Central Cluster Management Interface in your own infrastructure, in the cloud, on-premise at the edge, even fully air-gapped</li>
-                            <li>Can Be Upgraded to Premium Support Plan</li>
+                            <li>Premium support plan</li>
                         </ul>
                     </div>
                 </div>
