--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -5,10 +5,8 @@
     {{ partial "body_start.html" . }}
 
             <!-- Main Header-->
-    {{ if or .IsHome (or (in (slice "documentation" "pricing" "subscribe") .Section) (and (in (slice "articles") .Section) .IsPage)) }}
+    {{ if .IsHome }}
     {{ partial "top-banner" (dict "context" . "classes" "") }}
-    {{ else }}
-    {{ partial "top-banner" (dict "context" . "classes" "top-banner_dark") }}
     {{ end }}
 
             {{ if (eq $.Section "documentation") }}
