--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-hero.html
@@ -1,6 +1,6 @@
 <section class="qdrant-articles-hero">
   <div class="container">
-    <h1 class="qdrant-articles-hero__title">{{ .Params.new_title }}</h1>
+    <h1 class="qdrant-articles-hero__title">{{ .Params.title }}</h1>
     <h5 class="qdrant-articles-hero__subtitle">{{ .Params.section_title }}</h5>
   </div>
   <div class="qdrant-articles-hero__overlay"></div>
