--- a/qdrant-landing/themes/qdrant-2024/assets/css/components/_post.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/components/_post.scss
@@ -8,13 +8,8 @@
     margin-bottom: $spacer * 1.5;
     overflow: hidden;
 
-    & > div {
+    img {
       width: 100%;
-      height: 0;
-      padding-bottom: 50%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
     }
   }
 
@@ -55,7 +50,7 @@
       color: $primary-50;
     }
 
-    .post-preview > div {
+    .post-preview > img {
       transform: scale(1.1);
       transition: all 0.25s ease-in-out;
     }
