--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
@@ -24,7 +24,7 @@
         <article class="qdrant-blog-features__articles-main post">
           <a class="post-link" href="/">
             <div class="post-preview">
-              <div style="background-image: url({{ .Params.preview_image }})"></div>
+              <img src="{{ .Params.preview_image }}" alt="Preview">
             </div>
             <h5 class="post-title">{{ .Params.title }}</h5>
             <div class="post-about">
