--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
@@ -5,7 +5,7 @@
         <article class="qdrant-blog-posts__article post col-12 col-xl-4">
           <a class="post-link" href="/">
             <div class="post-preview">
-              <div style="background-image: url({{ .Params.preview_image }})"></div>
+              <img src="{{ .Params.preview_image }}" alt="Preview">
             </div>
             <h6 class="post-title">{{ .Params.title }}</h6>
             <p class="post-description">{{ .Params.description }}</p>
