--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -55,3 +55,5 @@
 @import 'partials/pagination';
 @import 'partials/newsletter';
 @import 'partials/qdrant-blog-post';
+@import 'partials/contact-hero';
+@import 'partials/contact-form';
