--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-list.html
@@ -1,5 +1,17 @@
+{{ $setting := "" }}
+
+{{ if .Scratch.Get "setting" }}
+  {{ $setting = .Scratch.Get "setting" }}
+{{ end }}
+
 {{ with (.Site.GetPage "/headless/customer-list") }}
-  <section class="customer-list">
+  <section class="customer-list{{ index $setting 0 }}">
+    {{ if index $setting 1 }}
+      <div class="container">
+        <h6 class="customer-list__title">{{ index $setting 1 }}</h6>
+      </div>
+    {{ end }}
+
     {{ $context := slice }}
     {{ range .Params.customers }}
       {{ $context = $context | append (dict "svg" .logo "name" .name) }}
