Add Not-found Page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -55,3 +55,4 @@
 @import 'partials/pagination';
 @import 'partials/newsletter';
 @import 'partials/qdrant-blog-post';
+@import 'partials/not-found';
