--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -55,3 +55,9 @@
 @import 'partials/pagination';
 @import 'partials/newsletter';
 @import 'partials/qdrant-blog-post';
+@import 'partials/carousel';
+@import 'partials/leadership';
+@import 'partials/open-roles';
+@import 'partials/investors';
+@import 'partials/mission';
+@import 'partials/our-story';
