Add contact pages (#815)

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -61,3 +61,5 @@
 @import 'partials/investors';
 @import 'partials/mission';
 @import 'partials/our-story';
+@import 'partials/contact-hero';
+@import 'partials/contact-form';
