Add Not-found Page (#816)

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -55,6 +55,7 @@
 @import 'partials/pagination';
 @import 'partials/newsletter';
 @import 'partials/qdrant-blog-post';
+@import 'partials/not-found';
 @import 'partials/carousel';
 @import 'partials/leadership';
 @import 'partials/open-roles';
