--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_video.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_video.scss
@@ -43,4 +43,12 @@
       }
     }
   }
+
+  iframe {
+    width: 100%;
+    max-width: 920px;
+    aspect-ratio: 9/5.1;
+    border-radius: $spacer * 0.5;
+    overflow: hidden;
+  }
 }
