--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-video.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-video.html
@@ -2,7 +2,11 @@
   <section class="hybrid-cloud-video">
     <div class="container">
       <h3 class="hybrid-cloud-video__title">{{ .Params.title }}</h3>
-      {{ partial "video" (dict "context" .) }}
+      {{ if .Params.youtube }}
+        {{ partial "youtube-video" .Params.youtube }}
+      {{ else if .Params.video }}
+      {{ partial "video" .Params.video }}
+        {{ end }}
     </div>
   </section>
 {{ end }}
