Add Articles Page and Article-Post Page (#810)
* Add Articles Page and Article-Post Page

* fix

* custom gutters (#812)

* fix

---------

Co-authored-by: trean <trean.mi@gmail.com>

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -54,7 +54,9 @@
 @import 'partials/qdrant-blog-hero';
 @import 'partials/pagination';
 @import 'partials/newsletter';
-@import 'partials/qdrant-blog-post';
+@import 'partials/qdrant-post';
+@import 'partials/qdrant-articles-hero';
+@import 'partials/qdrant-articles-posts';
 @import 'partials/not-found';
 @import 'partials/carousel';
 @import 'partials/leadership';
