--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-posts.html
@@ -1,11 +1,11 @@
-<section class="qdrant-blog-posts">
+<section class="qdrant-articles-posts">
   <div class="container">
-    <div class="qdrant-blog-posts__articles row gx-5">
-      {{ range first 9 .Pages }}
-        <article class="qdrant-blog-posts__article post col-12 col-xl-4">
+    <div class="qdrant-articles-posts__articles row gx-4 gy-5 gy-xl-6">
+      {{ range first 10 .Pages }}
+        <article class="col-12 col-xl-6 post">
           <a class="post-link" href="/">
             <div class="post-preview">
-              <img src="{{ .Params.preview_image }}" alt="Preview">
+              <img src="{{ .Params.preview_dir }}/preview.jpg" alt="Preview">
             </div>
             <h6 class="post-title">{{ .Params.title }}</h6>
             <p class="post-description">{{ .Params.description }}</p>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="row">
-      <div class="qdrant-blog-posts__pagination col-12">
+      <div class="qdrant-articles-posts__pagination col-12">
         {{ partial "pagination" . }}
       </div>
     </div>
