hubspot form link for privat cloud

--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -116,7 +116,7 @@
                             <br>
                             <br>
                         </div>
-                        <a href="{{ .Site.Params.mailchimp_contact_form }}" class="theme-btn btn-style-five btn-small w-100" target="_blank">
+                        <a href="{{ .Site.Params.prices_contact_form }}" class="theme-btn btn-style-five btn-small w-100" target="_blank">
                             <span class="txt">Contact Us</span>
                         </a>
                         <ul class="price-list">
