--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -64,3 +64,7 @@
 @import 'partials/our-story';
 @import 'partials/contact-hero';
 @import 'partials/contact-form';
+@import 'partials/use-cases-vector-hero';
+@import 'partials/advanced-search-features';
+@import 'partials/advanced-search-use-cases';
+@import 'partials/advanced-search-get-started';
