--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/advanced-search-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/advanced-search-use-cases.html
@@ -2,7 +2,7 @@
 <section class="advanced-search-use-cases">
   <div class="container">
     <h2 class="advanced-search-use-cases__title">{{ .Params.title }}</h2>
-    <div class="advanced-search-use-cases__cards row gy-4">
+    <div class="advanced-search-use-cases__cards row g-4">
       {{ range .Params.features }}
       <div class="col-12 col-xl-4">
         <div class="card advanced-search-use-cases__card">
