--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-posts.html
@@ -5,7 +5,7 @@
         <article class="col-12 col-xl-6 post">
           <a class="post-link" href="/">
             <div class="post-preview">
-              <img src="{{ .Params.preview_dir }}/preview.jpg" alt="Preview">
+              <img src="{{ .Params.preview_dir }}/preview.jpg" alt="Preview" />
             </div>
             <h6 class="post-title">{{ .Params.title }}</h6>
             <p class="post-description">{{ .Params.description }}</p>
