--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
@@ -19,12 +19,13 @@
 
     {{ $all := ($.Site.GetPage "blog" .Section).Pages.ByPublishDate.Reverse }}
 
+
     <div class="qdrant-blog-features__articles">
       {{ range first 1 (where $all ".Params.featured" "=" true) }}
         <article class="qdrant-blog-features__articles-main post">
           <a class="post-link" href="/">
             <div class="post-preview">
-              <img src="{{ .Params.preview_image }}" alt="Preview">
+              <img src="{{ .Params.preview_image }}" alt="Preview" />
             </div>
             <h5 class="post-title">{{ .Params.title }}</h5>
             <div class="post-about">
@@ -35,6 +36,7 @@
           </a>
         </article>
       {{ end }}
+
 
       <div class="qdrant-blog-features__articles-secondary">
         {{ range first 3 (after 1 (where $all ".Params.featured" "=" true)) }}
